# Moon-Packing

./: .gitattributes  .gitignore  .zenodo.json  CITATION.cff  CONTRIBUTING.md  DATA_LICENSE  Example  LICENSE  Makefile  Python  README.md  checksums.sha256  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
Data/: README.md  Simulation_Archive.ipynb  simulation_archive_data.ipynb  simulation_archive_data_minimal.ipynb
Data/Ceres/: Tau_0.txt  Tau_100.txt  Tau_100_final.txt  Tau_698.txt
Data/Luna/: 2_Luna_0s_final.txt  Tau_0.txt  Tau_100.txt  Tau_698.txt
Data/Pluto/: Tau_0.txt  Tau_100.txt  Tau_100_final.txt  Tau_698.txt  output_P_4moons_T0_7.5_0.txt  (+2 more)
Example/: Fig1.ipynb  Github.ipynb  REBOUNDx
Python/: Driver(Colab).py  Driver(TAMU).py  Driver(e0).py  Driver.py  Mean_Motion_Resonance.py  REBOUNDx.py  Secular_Tidal  Secular_Tide.py  plot_Fig01.py  plot_Fig02.py  plot_Fig03.py  plot_Fig08.py  plot_Fig1.py  plot_Fig2.py  plot_Fig3.py
Scripts/: Fig01.py  Fig02.py  MMR.py  REBOUNDx_Tides.py  merge_tiles.py  reproduce_figures.py  run_grid.py
data/: MANIFEST.csv  Simulation_Archive.ipynb
docs/: DATA_DICTIONARY.md  FIGURE_MAP.md  REPRODUCIBILITY.md  ZENODO_RELEASE.md
examples/: quick_start.sh  run_small_grid.sh  run_timeseries_cases.sh  slurm_array.sh
legacy/: README.md
manuscript/: README.md
notebooks/: 00_quick_start.ipynb  01_short_simulation.ipynb
scripts/: Driver.py  Fig03.py  Secular_Tides.py  run_timeseries.py  validate_tides.py
tests/: test_cli.py  test_dynamics.py  test_io.py  test_plotting.py
(+38 files in other folders)
